# ON_NotebookLM

./: .dockerignore  .env.example  .gitignore  AI_MODEL_REGISTRY.md  FINAL_STATUS_REPORT.md  NEXUS_BUILD_PLAN.md  NEXUS_DEPTH_AUDIT.md  README.md  VAULT_BUILD_REPORT.md  alembic.ini  pyproject.toml  run_vault_migration.py  setup_test_db.py  vault_tables.sql
.github/workflows/: ci.yml
database/migrations/: env.py
database/migrations/versions/: 001_initial_schema.py  002_phase2_phase3_tables.py  003_argon2_salt_column.py  004_hnsw_index_migration.py  005_batch2_router_tables.py  006_vault_foundation.py
database/schema/: 001_initial.sql
database/seeds/: README.md  seed_models.py
deploy/: Dockerfile  README.md  docker-compose.yml  prometheus.yml
deploy/backups/: nexus_20260415_192125.dump
deploy/grafana/dashboards/: nexus-overview.json
deploy/grafana/provisioning/alerting/: contact-points.yaml  notification-policies.yaml  rules.yaml
docs/: backup-restore-runbook.md  coverage-rationale.md  deployment-runbook.md  secret-rotation-runbook.md
docs/adrs/: 001-domain-scoped-monorepo.md  002-multi-model-ai-strategy.md  003-celery-redis-async.md  README.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: app.spec.ts
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BrainPanel.tsx  NotesPanel.tsx  ResearchPanel.tsx  SettingsPanel.tsx
frontend/src/components/Vault/: DocumentTypeBadge.tsx  LibrarianStatus.tsx  ProjectSelector.tsx  ReviewQueue.tsx  UploadQueue.tsx  UploadZone.tsx  VaultActivity.tsx  VaultPage.tsx  VaultStats.tsx  index.ts
frontend/src/hooks/: useVault.ts
frontend/src/lib/: api.ts  store.ts  utils.test.ts  utils.ts
frontend/src/types/: vault.ts
prompts/: README.md
prompts/chat/: system.md
prompts/podcast/: script_generator.md
prompts/research/: grounding.md
scripts/: backup.sh  restore.sh  setup-integration-tests.ps1
src/: __init__.py  config.py  exceptions.py  main.py  worker.py
src/agents/nexus-agent-embed/: __init__.py
src/agents/nexus-model-layer/: __init__.py
src/agents/nexus_agent_content/: __init__.py
src/agents/nexus_agent_embed/: __init__.py
src/agents/nexus_agent_orchestrator/: __init__.py
src/agents/nexus_agent_researcher/: __init__.py
src/agents/nexus_agent_vision/: __init__.py
src/agents/nexus_agent_voice/: __init__.py
src/agents/nexus_model_layer/: __init__.py
src/api/: admin.py  artifacts.py  brain.py  chat.py  collaboration.py  debate.py  export.py  local.py  mindmap.py  models.py  notebooks.py  plugins.py  prompts.py  research.py  sources.py  verification.py  websocket.py
src/core/: hybrid_search.py  podcast_presets.py
src/core/nexus-source-ingest/: __init__.py
src/core/nexus-studio-queue/: __init__.py
src/core/nexus_audio_join/: __init__.py
src/core/nexus_brain_knowledge/: __init__.py
src/core/nexus_datatable_engine/: __init__.py
src/core/nexus_export_engine/: __init__.py
src/core/nexus_infographic_engine/: __init__.py
src/core/nexus_mindmap_engine/: __init__.py
src/core/nexus_research_grounding/: __init__.py
src/core/nexus_slide_engine/: __init__.py
src/core/nexus_source_ingest/: __init__.py
src/core/nexus_studio_queue/: __init__.py
src/core/nexus_ui_shell/: __init__.py
src/core/nexus_video_engine/: __init__.py
src/infra/nexus-cost-tracker/: __init__.py
src/infra/nexus-data-persist/: __init__.py
src/infra/nexus-local-sync/: __init__.py
src/infra/nexus-obs-tracing/: __init__.py
src/infra/nexus-plugin-bridge/: __init__.py
src/infra/nexus_cost_tracker/: __init__.py
src/infra/nexus_data_persist/: __init__.py
src/infra/nexus_local_sync/: __init__.py
src/infra/nexus_obs_tracing/: __init__.py
src/infra/nexus_plugin_bridge/: __init__.py
src/infra/nexus_prompt_registry/: __init__.py
src/infra/nexus_test_harness/: __init__.py
src/infra/nexus_vault_keys/: __init__.py
src/infra/nexus_ws_broker/: __init__.py
src/vault/: __init__.py  classifier_prompts.py  document_types.py  extractors.py  file_storage.py  integration.py  librarian.py  repositories.py  router.py
src/vault/workflows/: __init__.py  base_workflow.py  change_order_workflow.py  coi_workflow.py  deadline_tasks.py  general_workflow.py  invoice_workflow.py  notification_service.py  permit_workflow.py  rfi_workflow.py  schedule_workflow.py  submittal_workflow.py  workflow_router.py
tests/: README.md  conftest.py  test_integration.py  test_vault_database.py  test_vault_integration.py  test_vault_workflows.py
tests/eval/: .gitkeep  test_ai_output_quality.py
tests/integration/: .gitkeep  conftest.py  test_api.py  test_notebooks.py  test_sources.py  test_ws_scaling.py
tests/mocks/: ai_providers.py  fixtures.py
tests/unit/: test_agent_content.py  test_agent_embed.py  test_agent_orchestrator.py  test_agent_researcher.py  test_agent_voice.py  test_audio_join.py  test_brain_router.py  test_collaboration_hub.py  test_cost_tracker.py  test_data_persist.py  test_exceptions.py  test_export_engine.py  test_fsrs.py  test_hybrid_search.py  test_main_app.py  test_model_layer.py  test_new_engines.py  test_new_routers.py  test_obs_tracing.py  test_podcast_presets.py  test_prompt_registry.py  test_research_grounding.py  test_slide_engine.py  test_source_ingest.py  test_studio_queue.py  test_ui_shell.py  test_vault_keys.py  test_vault_librarian.py  test_video_engine.py  test_websocket_manager.py  test_websocket_routes.py  test_worker.py  test_ws_broker.py
