[project]
name = "nexus-notebook-11-lm"
version = "0.1.0"
description = "Nexus Notebook 11 LM — Production-grade NotebookLM module (Codename: ESPERANTO)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-genai>=1.0.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "loguru>=0.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "pydub>=0.25.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "cryptography>=42.0.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "sentry-sdk[fastapi]>=2.5.0",
    "prometheus-client>=0.20.0",
    "reportlab>=4.2.0",
    "python-docx>=1.1.0",
    "ebooklib>=0.18",
    "markdown>=3.6",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]
local = [
    "ollama>=0.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = [
    # import sorting — to be fixed incrementally
    "I001",
    # unused imports — pervasive, fix separately
    "F401",
    # unused variables — fix separately
    "F841",
    # line too long — pre-existing, relax for now
    "E501",
    # module-level import not at top — deliberate in some files
    "E402",
    # deprecated typing imports (collections.abc) — fix separately
    "UP035",
    # possible hardcoded password — test fixtures only
    "S106",
    # datetime.UTC alias
    "UP017",
    # assert in tests
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"tests/conftest.py" = ["S101", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: Integration tests requiring database/services",
    "unit: Unit tests with no external dependencies",
]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]
