[project]
name = "nexus-notebook-11-lm"
version = "0.1.0"
description = "Nexus Notebook 11 LM — Production-grade NotebookLM module (Codename: ESPERANTO)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-genai>=1.0.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "loguru>=0.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "pydub>=0.25.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "sentry-sdk[fastapi]>=2.5.0",
    "prometheus-client>=0.20.0",
    "reportlab>=4.2.0",
    "python-docx>=1.1.0",
    "ebooklib>=0.18",
    "markdown>=3.6",
    "pymupdf>=1.24.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "types-Markdown>=3.7.0",
]
local = [
    "ollama>=0.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = [
    "E501",
    "UP042",
    "E402",
]

[tool.ruff.lint.per-file-ignores]
# FastAPI Depends()/File() in route defaults are framework idioms, not mutable-default bugs.
"src/api/*.py" = ["B008"]
# Public exception names are API-stable (renaming would break importers).
"src/exceptions.py" = ["N818"]
# S110: intentional try/except/pass in test doubles (optional cleanup paths).
"tests/**/*.py" = ["S101", "E501", "S105", "S106", "S110"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: Integration tests requiring database/services",
    "unit: Unit tests with no external dependencies",
    "eval: AI output quality evaluation tests",
]
addopts = [
    "--cov=src",
    "--cov-fail-under=65",
    "--cov-report=term-missing",
    "-q",
]
asyncio_mode = "auto"

# Batch 5 — full-tree `mypy src/`; CI passes `--ignore-missing-imports` for third-party gaps.
# Untyped API route handlers and Celery tasks are still allowed; new code should annotate.
[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true

[[tool.mypy.overrides]]
module = "youtube_transcript_api.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    # Infrastructure-bound modules — require live services
    # to test meaningfully. Covered by integration test suite
    # when Docker environment is available.
    # Decision rationale: docs/coverage-rationale.md
    # (Paths match repo layout: vision under agents/, audio_join under core/.)
    "src/agents/nexus_agent_vision/*",
    "src/infra/nexus_local_sync/*",
    "src/infra/nexus_plugin_bridge/*",
    "src/core/nexus_audio_join/*",
    "src/infra/nexus_test_harness/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "@(abc\\.)?abstractmethod",
]
fail_under = 65
show_missing = true
skip_covered = false

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]
# B104: bind address is environment-aware; containers use uvicorn `--host` in Dockerfile.
# B608: SQLAlchemy `text()` with validated table/column identifiers (see nexus_data_persist).
# B105: literal redaction tokens in log sanitizer map (not real secrets).
skips = ["B104", "B608", "B105"]
